<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.login.LoginActivity"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_above="@id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true">

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/login_background" />

            <TextView
                android:id="@+id/skip"
                android:text="@string/skip"
                android:textColor="#092042"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_10sdp"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/_login_background_shape"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/_login_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_into_estisharati"
            android:textColor="#092042"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_and_enjoy"
            android:textColor="#092042"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/button_shape_5"
            android:backgroundTint="#F6F7FB"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/_mail" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_shape_5"
            android:backgroundTint="#F6F7FB"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/_key" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:paddingTop="@dimen/_18sdp"
                android:text="@string/create_account_underline"
                android:textColor="#092042" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/reset_password_underline"
                android:textColor="#092042" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_shape_3"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</RelativeLayout>
</layout>